--- a/GridgeTest/src/main/resources/application-secret.yml
+++ b/GridgeTest/src/main/resources/application-secret.yml
@@ -5,6 +5,41 @@ spring:
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-#  redis:
-#    host: localhost
-#    port: 6379
+  redis:
+    host: localhost
+    port: 6379
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 3d195b903c00b83a9f9a0cfd682df053
+            client-secret: 92hnYXTq0hrQSDyhXJyMGt2wdgkgmeiy
+            redirect-uri: http://localhost:8080/oauth2/callback/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile_nickname
+              - profile_image
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
+app:
+  auth:
+    tokenSecret: imatokenforaccess
+    tokenExpirationMsec: 1000000
+    refreshTokenExpiry: 1209600000
+  oauth2:
+    # After successfully authenticating with the OAuth2 Provider,
+    # we'll be generating an auth token for the user and sending the token to the
+    # redirectUri mentioned by the client in the /oauth2/authorize request.
+    # We're not using cookies because they won't work well in mobile clients.
+    authorizedRedirectUris:
+      - http://localhost:8080
